<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:id="@+id/background_changeBackgroundActivity"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@drawable/blur_background"
tools:context="com.example.aclarke211.mymedicare.ChangeBackground">

<LinearLayout
    android:id="@+id/changableBackgroundLayout_changeBackgroundActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_background"
    android:layout_margin="10dp"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvChangeBackground_changeBackgroundActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/changeBackgroundMessage_string" />

    <ScrollView
        android:id="@+id/scrollView_buttonsContainer_changeBackgroundActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:id="@+id/buttonsContainer_changeBackgroundActivity"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnBlue_changeBackgroundActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blueColourButton_string"
                android:layout_centerHorizontal="true"
                android:background="@color/blueBackground_colour"
                android:onClick="onButtonClick"
                android:layout_marginBottom="10dp" />

            <Button
                android:id="@+id/btnYellow_changeBackgroundActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellowColourButton_string"
                android:layout_centerHorizontal="true"
                android:background="@color/yellowBackground_colour"
                android:onClick="onButtonClick"
                android:layout_marginBottom="10dp" />

            <Button
                android:id="@+id/btnWhite_changeBackgroundActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whiteColourButton_string"
                android:layout_centerHorizontal="true"
                android:background="@color/whiteBackground_colour"
                android:onClick="onButtonClick" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>

</LinearLayout>
