<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_messageGPActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/blur_background"
    tools:context="com.example.aclarke211.mymedicare.MessageGP">

    <ScrollView
        android:id="@+id/scrollView_messageGPActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/changableBackgroundLayout_messageGPActivity"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/white_background"
            android:padding="15dp">

            <LinearLayout
                android:id="@+id/gpDetailsLayout_messageGPActivity"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvGpName_messageGPActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/gpNameText_string"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/tvGpNumber_messageGPActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gpNumberText_string"
                    android:layout_above="@+id/tvMessage_messageGPActivity"
                    android:layout_toRightOf="@+id/tvGpName_messageGPActivity"
                    android:layout_toEndOf="@+id/tvGpName_messageGPActivity"
                    android:paddingLeft="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/messageContainer_messageGPActivity"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/tvMessage_messageGPActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/enterMessageText_string"
                    android:layout_below="@+id/tvGpName_messageGPActivity"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:id="@+id/etMessage_messageGPActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvMessage_messageGPActivity"
                    android:layout_alignParentLeft="true"
                    android:hint="@string/messageHintText_string"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonsContainer_messageGPActivity"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/btnSendMessage_messageGPActivity"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sendTextButton_string"
                    android:layout_below="@+id/etMessage_messageGPActivity"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/green_opacity_text_button"
                    android:textColor="@color/white_colour"
                    android:onClick="onButtonClick"/>

                <Button
                    android:id="@+id/btnBack_messageGPActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelButton_string"
                    android:layout_below="@+id/btnSendMessage_messageGPActivity"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/black_text_button"
                    android:onClick="onButtonClick"
                    android:layout_marginTop="15dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
