<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background_updateValuesActivity"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/blur_background">

    <ScrollView
        android:id="@+id/scrollView_updateValuesActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/changableBackgroundLayout_updateValuesActivity"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/white_background"
            android:layout_margin="10dp"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/fieldsContainer_updateValuesActivity"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvTemperature_updateValuesActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/tempField_string" />

                <EditText
                    android:id="@+id/etTemperature_updateValuesActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/tvLowBloodPressure_updateValuesActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/bloodPressureLow_string" />

                <EditText
                    android:id="@+id/etLowBloodPressure_updateValuesActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/tvHighBloodPressure_updateValuesActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/bloodPressureHigh_string" />

                <EditText
                    android:id="@+id/etHighBloodPressure_updateValuesActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/tvHeartRate_updateValuesActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/heartRate_string" />

                <EditText
                    android:id="@+id/etHeartRate_updateValuesActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonsContainer_updateValuesActivity"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/btnConfirm_updateValuesActivity"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmButton_string"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/green_opacity_text_button"
                    android:textColor="@color/white_colour"
                    android:onClick="onButtonClick" />

                <Button
                    android:id="@+id/btnBack_updateValuesActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelButton_string"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/black_text_button"
                    android:onClick="onButtonClick"
                    android:layout_marginTop="15dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>